Изменил шаблоны ошибок

--- a/templates/404.html
+++ b/templates/404.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {%  block content %}
-	Ошибка 404
+	<h2>Ошибка 404 - Запрашиваемая страница не найдена...</h2>
 {% endblock %}
