--- a/templates/500.html
+++ b/templates/500.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {%  block content %}
-	Ошибка 500
+    <h2>Упс! Произошла внутренняя ошибка... Приносим извинения</h2>
 {% endblock %}
