Перед добавлением работы и прохождением разминки необходимо получить заявку от библиотекаря

--- a/templates/includes/top_menu.html
+++ b/templates/includes/top_menu.html
@@ -22,16 +22,13 @@
 			</ul>
 
 			<ul class="nav pull-right">
-				<li {% ifequal request.path '/works/training/' %}class="active"{% endifequal %}>
-					<a href="{% url work_training %}">Разминка</a>
-				</li>
 				<li {% if '/works/list/' in request.path %}class="active"{% endif %}>
 					<a href="{% url works_list %}">Творчество</a>
 				</li>
 				<li {% ifequal request.path '/works/ratio/' %}class="active"{% endifequal %}>
 					<a href="{% url works_ratio %}">Рейтинг</a>
 				</li>
-				<li>
+				<li {% ifequal request.path '/guide/list/' %}class="active"{% endifequal %}>
 					<a href="{% url guide_list %}">
 						<i class="icon-question-sign icon-white"></i> Помощь
 					</a>
@@ -44,12 +41,24 @@
 							<i class="icon-user icon-white"></i> {{ request.user.username }} <b class="caret"></b>
 						</a>
 						<ul class="dropdown-menu">
-							<li>
-								<a href="{% url works_by_user request.user.id %}">Мои работы</a>
-							</li>
-							<li>
-								<a href="{% url work_add %}">Добавить работу</a>
-							</li>
+                            {% if request.user.get_profile.get_apply_access %}
+                                <li {% if 'by-user' in request.path %}class="active"{% endif %}>
+                                    <a href="{% url works_by_user request.user.id %}">Мои работы</a>
+                                </li>
+                                <li {% ifequal request.path '/works/list/add/' %}class="active"{% endifequal %}>
+                                    <a href="{% url work_add %}">Добавить работу</a>
+                                </li>
+                                {% if not request.user.get_profile.did_training %}
+                                    <li class="divider"></li>
+                                    <li {% ifequal request.path '/works/training/' %}class="active"{% endifequal %}>
+                                        <a href="{% url work_training %}">Разминка</a>
+                                    </li>
+                                {% endif %}
+                            {% else %}
+                                <li>
+                                    <a href="{% url work_apply %}">Подать заявку на участие</a>
+                                </li>
+                            {% endif %}
 							<li class="divider"></li>
 							<li>
 								<a href="{% url auth_logout %}">
