--- a/templates/publicauth/extra.html
+++ b/templates/publicauth/extra.html
@@ -2,14 +2,16 @@
 {% load i18n %}
 
 {% block content %}
-<h2>{% trans "Registration with OpenID: last step" %}</h2>
-<p><label>{% trans "OpenID URL" %}:</label> {{ openid_url }}</p>
-<form method="post">
-    {% csrf_token %}
-    <formfield>
-        <legend>Регистрация через OpenID</legend>
-        <div class="wide">{{ form.as_p }}</div>
-        <p><input type="submit" value="{% trans "Submit" %}"/></p>
-    </formfield>
-</form>
+    <form method="post">
+        {% csrf_token %}
+        <formfield>
+            <legend>Регистрация через ВКонтакте и FaceBook</legend>
+            <div class="wide">
+                {{ form.as_p }}
+            </div>
+            <p>
+                <input type="submit" value="Зарегистрироваться" />
+            </p>
+        </formfield>
+    </form>
 {% endblock %}
