--- a/templates/works/training.html
+++ b/templates/works/training.html
@@ -15,22 +15,19 @@
 
 {% block content %}
 	<h1>Разминка</h1>
-	<div class="alert alert-info">
-		<a class="close" data-dismiss="alert">×</a>
-		Вы можете пройти размину. Правила: !!!!допишите текст<br />
-	</div>
-	{% if not request.user.is_authenticated %}
-		Только авторизованные пользователи могут пройти тестирование.<br />
-		<a href="{% url auth_login %}">Авторизуйтесь</a> или <a href="{% url registration_register %}">зарегистрируйтесь</a>.
-	{% endif %}
 
-	{% if request.user.is_authenticated %}
+	{% if request.user.get_profile.get_apply_access %}
 		{% if request.user.get_profile.did_training %}
 			<div class="alert alert-info">
 				<a class="close" data-dismiss="alert">×</a>
 				Вы уже прошли тест. Ваш результат: {{ request.user.get_profile.get_right_answerds }}
 			</div>
 		{% else %}
+            <div class="alert alert-info">
+                <a class="close" data-dismiss="alert">×</a>
+                Вы можете пройти размину. Правила: !!!!допишите текст<br />
+            </div>
+
 			<div class="alert alert-warning">
 				<a class="close" data-dismiss="alert">×</a>
 				<h4 class="alert-heading">Внимание!</h4>
@@ -42,32 +39,36 @@
 					неправильно {{ not_right }}
 				</div>
 			{% endif %}
-			{%  if questions %}
-				<form id="training_form" action="" method="post">
-					{% csrf_token %}
-					{% for q in questions %}
-						<div class="row">
-							<div class="span6">
-								<strong>Вопрос №{{ forloop.counter }}</strong>:
-								<pre>{{ q.question }}</pre>
-							</div>
-							<div class="span6">
-								<p><input type="radio" name="question_id{{ q.id }}" value="1" checked="checked">{{ q.answerd1 }}</p>
-								<p><input type="radio" name="question_id{{ q.id }}" value="2">{{ q.answerd2 }}</p>
-								<p><input type="radio" name="question_id{{ q.id }}" value="3">{{ q.answerd3 }}</p>
-								<p><input type="radio" name="question_id{{ q.id }}" value="4">{{ q.answerd4 }}</p>
-							</div>
-						</div>
-					{% endfor %}
-					<div class="row">
-						<div class="span2 offset6">
-							<button class="btn btn-primary" type="submit">Завершить разминку</button>
-						</div>
-					</div>
-				</form>
-			{% else %}
-				Вопросы не заданы. Обратитесь к администрации.
-			{% endif %}
-		{% endif %}
+            <form id="training_form" action="" method="post">
+                {% csrf_token %}
+                {% for q in questions %}
+                    <div class="row">
+                        <div class="span6">
+                            <strong>Вопрос №{{ forloop.counter }}</strong>:
+                            <pre>{{ q.question }}</pre>
+                        </div>
+                        <div class="span6">
+                            <p><input type="radio" name="question_id{{ q.id }}" value="1" checked="checked">{{ q.answerd1 }}</p>
+                            <p><input type="radio" name="question_id{{ q.id }}" value="2">{{ q.answerd2 }}</p>
+                            <p><input type="radio" name="question_id{{ q.id }}" value="3">{{ q.answerd3 }}</p>
+                            <p><input type="radio" name="question_id{{ q.id }}" value="4">{{ q.answerd4 }}</p>
+                        </div>
+                    </div>
+                {% endfor %}
+                <div class="row">
+                    <div class="span2 offset6">
+                        <button class="btn btn-primary" type="submit">Завершить разминку</button>
+                    </div>
+                </div>
+            </form>
+        {% endif %}
+    {% else %}
+        Сначала
+        {% if request.user.get_profile.has_apply %}
+            <s>подать заявку</s>
+        {% else %}
+            подать заявку
+        {% endif %}
+         и получить <b>одобрение блиотекаря</b>.
 	{% endif %}
 {% endblock %}
