--- a/templates/works/add_work.html
+++ b/templates/works/add_work.html
@@ -43,7 +43,7 @@
 {% endblock %}
 
 {% block works %}
-	{% if request.user.is_authenticated %}
+	{% if request.user.get_profile.get_apply_access and request.user.get_profile.did_training %}
 		<form action="" method="POST" enctype="multipart/form-data">
 			{% csrf_token %}
 			<div class="row">
@@ -164,9 +164,17 @@
 			{% endif %}
 		</form>
 	{% else %}
-		<h1>Авторизация</h1>
-		Для добавления работы авторизуйтесь.
-		<hr/>
-		{% include "registration/includes/login_form.html" %}
+		Для добавления работы вам необходимо
+        {% if request.user.get_profile.has_apply %}
+            <s>подать заявку</s>
+        {% else %}
+            подать заявку
+        {% endif %}
+        и
+        {% if request.user.get_profile.did_training %}
+            <s>пройти разминку</s>
+        {% else %}
+            пройти разминку
+        {% endif %}.
 	{% endif %}
 {% endblock %}
