--- a/templates/works/training.html
+++ b/templates/works/training.html
@@ -63,12 +63,22 @@
             </form>
         {% endif %}
     {% else %}
-        Сначала
-        {% if request.user.get_profile.has_apply %}
-            <s>подать заявку</s>
-        {% else %}
-            подать заявку
-        {% endif %}
-         и получить <b>одобрение блиотекаря</b>.
+        <h3>Для прохождение разминки необходимо</h3>
+        <ul>
+            <li>
+                {% if request.user.get_profile.get_apply_exists %}
+                    <s>подать заявку</s>
+                {% else %}
+                    подать заявку
+                {% endif %}
+            </li>
+            <li>
+                {% if request.user.get_profile.get_apply_access %}
+                    <s>получить одобрение библиотекаря</s>
+                {% else %}
+                    получить одобрение библиотекаря
+                {% endif %}
+            </li>
+        </ul>
 	{% endif %}
 {% endblock %}
