Добавил "BelLib.Ru - ..." в логотип

--- a/templates/includes/top_menu.html
+++ b/templates/includes/top_menu.html
@@ -27,9 +27,9 @@
 		<div class="container">
 			<ul class="nav pull-left">
 				{% ifequal request.path url_main_page %}
-					<a class="brand" href="#" id="logo" style="cursor: default;">Края лучше .NET</a>
+					<a class="brand" href="#" id="logo" style="cursor: default;">BelLib.Ru - Края лучше .NET</a>
 				{% else %}
-					<a class="brand" href="/" id="logo">Края лучше .NET</a>
+					<a class="brand" href="/" id="logo">BelLib.Ru - Края лучше .NET</a>
 				{% endifequal %}
 			</ul>
 
