Добавил на главную кнопку "Подать заявку на участие в проекте"

--- a/templates/simple_pages/main_page.html
+++ b/templates/simple_pages/main_page.html
@@ -25,6 +25,11 @@
             Аксенова Татьяна Николаевна – директор Белоярской централизованной библиотечной системы,
             <strong>г.Белоярский, телефон (34670) 2-53-51</strong>
         </dd>
+        <dt></dt>
+        <dd>
+            <br />
+            <button class="btn btn-primary" onclick="document.location='{% url work_apply %}'">Подать заявку на участие в проекте</button>
+        </dd>
     </dl>
 
     <h2>Ответственные</h2>
